--- a/notebooks/01-Data cleaning Preprocessing .ipynb
+++ b/notebooks/01-Data cleaning Preprocessing .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "52e0e714",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "995ecd68",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "78047dcb",
    "metadata": {},
    "outputs": [
@@ -310,6 +310,10 @@
      "output_type": "stream",
      "text": [
       "Dropped 11 rows with missing TotalCharges\n",
+      "No     5890\n",
+      "Yes    1142\n",
+      "Name: SeniorCitizen, dtype: int64\n",
+      "dtype: object\n",
       "Shape after cleaning: (7032, 20)\n",
       "Dtypes after cleaning:\n",
       " gender               object\n",
@@ -387,7 +391,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Female</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>1</td>\n",
@@ -410,7 +414,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Male</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>34</td>\n",
@@ -433,7 +437,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Male</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>2</td>\n",
@@ -459,9 +463,9 @@
       ],
       "text/plain": [
        "   gender SeniorCitizen Partner Dependents  tenure PhoneService  \\\n",
-       "0  Female             0     Yes         No       1           No   \n",
-       "1    Male             0      No         No      34          Yes   \n",
-       "2    Male             0      No         No       2          Yes   \n",
+       "0  Female            No     Yes         No       1           No   \n",
+       "1    Male            No      No         No      34          Yes   \n",
+       "2    Male            No      No         No       2          Yes   \n",
        "\n",
        "      MultipleLines InternetService OnlineSecurity OnlineBackup  \\\n",
        "0  No phone service             DSL             No          Yes   \n",
@@ -479,7 +483,7 @@
        "2              Yes      Mailed check           53.85        108.15      1  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,6 +512,13 @@
     "\n",
     "# 6) Convert SeniorCitizen to categorical (even though stored as 0/1)\n",
     "df['SeniorCitizen'] = df['SeniorCitizen'].astype('object')\n",
+    "# Map SeniorCitizen values: 0 -> No, 1 -> Yes\n",
+    "df['SeniorCitizen'] = df['SeniorCitizen'].map({'0': 'No', '1': 'Yes', 0: 'No', 1: 'Yes'}).astype('object')\n",
+    "\n",
+    "# Verify\n",
+    "print(df['SeniorCitizen'].value_counts())\n",
+    "print(\"dtype:\", df['SeniorCitizen'].dtype)\n",
+    "\n",
     "\n",
     "# 7) Check results\n",
     "print(\"Shape after cleaning:\", df.shape)\n",
@@ -519,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "96aabf38",
    "metadata": {},
    "outputs": [
@@ -603,28 +614,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "4f7b83ef",
+   "execution_count": 13,
+   "id": "9ee5b952",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No     5890\n",
-      "Yes    1142\n",
-      "Name: SeniorCitizen, dtype: int64\n",
-      "dtype: object\n"
+      "Categorical features:\n",
+      "['gender', 'SeniorCitizen', 'Partner', 'Dependents', 'PhoneService', 'MultipleLines', 'InternetService', 'OnlineSecurity', 'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV', 'StreamingMovies', 'Contract', 'PaperlessBilling', 'PaymentMethod']\n",
+      "\n",
+      "Numerical features:\n",
+      "['tenure', 'MonthlyCharges', 'TotalCharges']\n",
+      "\n",
+      "Target distribution:\n",
+      "0    0.734215\n",
+      "1    0.265785\n",
+      "Name: Churn, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "# Map SeniorCitizen values: 0 -> No, 1 -> Yes\n",
-    "df['SeniorCitizen'] = df['SeniorCitizen'].map({'0': 'No', '1': 'Yes', 0: 'No', 1: 'Yes'}).astype('object')\n",
+    "# --- PHASE 2.3: Feature/Target Split & Feature Type Separation ---\n",
     "\n",
-    "# Verify\n",
-    "print(df['SeniorCitizen'].value_counts())\n",
-    "print(\"dtype:\", df['SeniorCitizen'].dtype)\n"
+    "# 1. Split features (X) and target (y)\n",
+    "X = df.drop(columns=['Churn'])\n",
+    "y = df['Churn']\n",
+    "\n",
+    "# 2. Identify categorical and numerical features\n",
+    "categorical_features = X.select_dtypes(include='object').columns.tolist()\n",
+    "numerical_features = X.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
+    "\n",
+    "# 3. Confirm splits\n",
+    "print(\"Categorical features:\")\n",
+    "print(categorical_features)\n",
+    "\n",
+    "print(\"\\nNumerical features:\")\n",
+    "print(numerical_features)\n",
+    "\n",
+    "print(\"\\nTarget distribution:\")\n",
+    "print(y.value_counts(normalize=True))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0a0c2870",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set size: (5625, 19)\n",
+      "Test set size: (1407, 19)\n",
+      "\n",
+      "Target distribution in y_train:\n",
+      "0    0.734222\n",
+      "1    0.265778\n",
+      "Name: Churn, dtype: float64\n",
+      "\n",
+      "Target distribution in y_test:\n",
+      "0    0.734186\n",
+      "1    0.265814\n",
+      "Name: Churn, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "#2.4\n",
+    "# Split data into 80% train and 20% test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    stratify=y  # maintains class balance in both sets\n",
+    ")\n",
+    "\n",
+    "# Confirm sizes\n",
+    "print(\"Train set size:\", X_train.shape)\n",
+    "print(\"Test set size:\", X_test.shape)\n",
+    "\n",
+    "# Confirm target distribution in both sets\n",
+    "print(\"\\nTarget distribution in y_train:\")\n",
+    "print(y_train.value_counts(normalize=True))\n",
+    "\n",
+    "print(\"\\nTarget distribution in y_test:\")\n",
+    "print(y_test.value_counts(normalize=True))\n"
    ]
   }
  ],
