--- a/notebooks/01-Data cleaning Preprocessing .ipynb
+++ b/notebooks/01-Data cleaning Preprocessing .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "52e0e714",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "995ecd68",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "78047dcb",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
        "2              Yes      Mailed check           53.85        108.15      1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "96aabf38",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "9ee5b952",
    "metadata": {},
    "outputs": [
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "0a0c2870",
    "metadata": {},
    "outputs": [
@@ -703,6 +703,172 @@
     "\n",
     "print(\"\\nTarget distribution in y_test:\")\n",
     "print(y_test.value_counts(normalize=True))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a5672d67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transformed train shape: (5625, 40)\n",
+      "Transformed test  shape: (1407, 40)\n",
+      "Total output features: 40\n",
+      "First 15 feature names: ['tenure', 'MonthlyCharges', 'TotalCharges', 'gender_Male', 'SeniorCitizen_Yes', 'Partner_Yes', 'Dependents_Yes', 'PhoneService_Yes', 'MultipleLines_No', 'MultipleLines_No phone service', 'MultipleLines_Yes', 'InternetService_DSL', 'InternetService_Fiber optic', 'InternetService_No', 'OnlineSecurity_No']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- PHASE 2.5: Preprocessing Pipeline (ColumnTransformer + Pipeline) ---\n",
+    "\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# 1) Define transformers\n",
+    "numeric_transformer = StandardScaler()\n",
+    "\n",
+    "# drop='if_binary' reduces redundant columns for true/binary categoricals (e.g., Yes/No),\n",
+    "# handle_unknown='ignore' makes the pipeline robust to unseen categories at inference time.\n",
+    "categorical_transformer = OneHotEncoder(\n",
+    "    handle_unknown='ignore',\n",
+    "    drop='if_binary',\n",
+    "    sparse=False\n",
+    ")\n",
+    "\n",
+    "# 2) Column-wise transformer\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numeric_transformer, numerical_features),\n",
+    "        ('cat', categorical_transformer, categorical_features)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# 3) Wrap into a Pipeline (preprocessing-only for now)\n",
+    "preprocessing_pipeline = Pipeline(steps=[\n",
+    "    ('preprocessor', preprocessor)\n",
+    "])\n",
+    "\n",
+    "# 4) Fit ONLY on training data (prevents leakage)\n",
+    "preprocessing_pipeline.fit(X_train)\n",
+    "\n",
+    "# 5) Inspect transformed shapes + get output feature names (handy for EDA/SHAP later)\n",
+    "X_train_t = preprocessing_pipeline.transform(X_train)\n",
+    "X_test_t  = preprocessing_pipeline.transform(X_test)\n",
+    "\n",
+    "print(\"Transformed train shape:\", X_train_t.shape)\n",
+    "print(\"Transformed test  shape:\", X_test_t.shape)\n",
+    "\n",
+    "# Feature names (numerics first, then OHE columns)\n",
+    "ohe = preprocessing_pipeline.named_steps['preprocessor'].named_transformers_['cat']\n",
+    "num_names = numerical_features\n",
+    "cat_names = ohe.get_feature_names_out(categorical_features).tolist()\n",
+    "feature_names_out = num_names + cat_names\n",
+    "\n",
+    "print(\"Total output features:\", len(feature_names_out))\n",
+    "print(\"First 15 feature names:\", feature_names_out[:15])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "42b699a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save cleaned full dataset (before train/test split)\n",
+    "df.to_csv(\"../data/telco_cleaned.csv\", index=False)\n",
+    "\n",
+    "# Save train/test splits separately (optional but recommended)\n",
+    "X_train.to_csv(\"../data/X_train.csv\", index=False)\n",
+    "X_test.to_csv(\"../data/X_test.csv\", index=False)\n",
+    "y_train.to_csv(\"../data/y_train.csv\", index=False)\n",
+    "y_test.to_csv(\"../data/y_test.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dd0534ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Data preprocessing report saved to ../reports/data_preprocessing.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "preprocessing_summary = f\"\"\"\n",
+    "# Customer Churn – Data Preprocessing Summary\n",
+    "\n",
+    "## 1. Data Loading & Inspection\n",
+    "- Dataset: **WA_Fn-UseC_-Telco-Customer-Churn.csv**\n",
+    "- Shape: 7043 rows × 21 columns\n",
+    "- Initial inspection showed customerID column (non-predictive).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2. Data Cleaning\n",
+    "- Dropped column: **customerID**\n",
+    "- Converted **TotalCharges** → numeric\n",
+    "- Found 11 missing values in TotalCharges → handled (removed or imputed)\n",
+    "- After cleaning: dataset ready for feature engineering\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 3. Feature Categorization\n",
+    "- **Categorical features (16):**\n",
+    "  gender, SeniorCitizen, Partner, Dependents, PhoneService,\n",
+    "  MultipleLines, InternetService, OnlineSecurity, OnlineBackup,\n",
+    "  DeviceProtection, TechSupport, StreamingTV, StreamingMovies,\n",
+    "  Contract, PaperlessBilling, PaymentMethod\n",
+    "\n",
+    "- **Numerical features (3):**\n",
+    "  tenure, MonthlyCharges, TotalCharges\n",
+    "\n",
+    "- **Target:** Churn (Yes/No → 1/0)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 4. Target Encoding\n",
+    "- Converted **Churn** to binary (Yes = 1, No = 0)\n",
+    "- Class distribution:\n",
+    "  - Stayed (0): ~73.4%\n",
+    "  - Churned (1): ~26.6%\n",
+    "- ⚠️ Noted class imbalance → will matter in model training\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 5. Train-Test Split\n",
+    "- Train set: 5625 rows (80%)\n",
+    "- Test set: 1407 rows (20%)\n",
+    "- Stratified split preserved churn ratio:\n",
+    "  - Train churn % ≈ 26.6%\n",
+    "  - Test churn % ≈ 26.6%\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## ✅ Deliverables\n",
+    "- Clean dataset with correct dtypes\n",
+    "- Features separated into categorical & numerical\n",
+    "- Target encoded\n",
+    "- Train/test sets created and saved\n",
+    "\"\"\"\n",
+    "\n",
+    "# Save as markdown\n",
+    "with open(\"../reports/data_preprocessing.md\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(preprocessing_summary)\n",
+    "\n",
+    "print(\"✅ Data preprocessing report saved to ../reports/data_preprocessing.md\")\n"
    ]
   }
  ],
